tests/test-files/parse-unless.txt
================================================================================
100 Missing predicate
================================================================================

(package test-package)

(define x (unless))

--------------------------------------------------------------------------------

error: Malformed unless expression
  --> test:3:17
   |
 3 |  (define x (unless))
   |                   ^ expected a predicate

================================================================================
101 Missing body
================================================================================

(package test-package)

(define x (unless True))

--------------------------------------------------------------------------------

error: Malformed function
  --> test:3:22
   |
 3 |  (define x (unless True))
   |                        ^ expected body

================================================================================
102 Non-boolean conditional
================================================================================

(package test-package)

(define x (unless "a" 1))

--------------------------------------------------------------------------------

error: Type mismatch
  --> test:3:18
   |
 3 |  (define x (unless "a" 1))
   |                    ^^^ Expected type 'BOOLEAN' but got 'STRING'
